--- a/trunk/src/test/Makefile.am
+++ b/trunk/src/test/Makefile.am
@@ -6,7 +6,7 @@ else
 elan_testprogs =
 endif
 
-noinst_PROGRAMS = $(elan_testprogs) pack-test log-test slurm_protocol_stream_client slurm_protocol_stream_server slurm_protocol_message_client slurm_protocol_message_server
+noinst_PROGRAMS = $(elan_testprogs) pack-test log-test slurm_protocol_stream_client slurm_protocol_stream_server 
 
 TESTS = pack-test log-test 
 
