o change Makefile to create only one slurmd

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -3,26 +3,25 @@
 
 AUTOMAKE_OPTIONS = foreign
 
+sbin_PROGRAMS = slurmd 
+
 if WITH_ELAN
 interconnect_lib = libelan_interconnect.la
 process_lib = libforked.la
-io_lib = libforked_io.la
+io_lib = libnbio.la
+noinst_LTLIBRARIES = \
+	libelan_interconnect.la	\
+	libforked.la		\
+	libnbio.la
 else
 interconnect_lib = libno_interconnect.la
 process_lib = libthreaded.la
 io_lib = libthreaded_io.la
+noinst_LTLIBRARIES = \
+	libno_interconnect.la	\
+	libthreaded.la		\
+	libthreaded_io.la
 endif
-
-#sbin_PROGRAMS = slurmd slurmd_nbio slurmd_elan
-sbin_PROGRAMS = slurmd slurmd_nbio slurmd_fork_nbio
-
-noinst_LTLIBRARIES = libelan_interconnect.la \
-		libno_interconnect.la \
-		libforked_io.la  \
-		libthreaded_io.la \
-		libnbio.la \
-		libforked.la \
-		libthreaded.la
 
 LDADD = $(top_srcdir)/src/common/libcommon.la \
 	$(top_srcdir)/src/common/libdaemonize.la \
@@ -30,8 +29,6 @@ LDADD = $(top_srcdir)/src/common/libcommon.la \
 	$(SSL_LIBS)
 
 slurmd_LDADD = $(process_lib) $(io_lib) $(LDADD) $(interconnect_lib)
-slurmd_nbio_LDADD = $(process_lib) libnbio.la $(LDADD) $(interconnect_lib)
-slurmd_fork_nbio_LDADD = libforked.la libnbio.la $(LDADD) $(interconnect_lib)
 	
 common_sources = slurmd.c \
 		get_mach_stat.c \
@@ -44,16 +41,10 @@ common_sources = slurmd.c \
 		setenvpf.c
 
 slurmd_SOURCES = $(common_sources)
-slurmd_nbio_SOURCES = $(common_sources)
-slurmd_fork_nbio_SOURCES = $(common_sources)
-
-#slurmd_elan_LDADD = libforked.la libforked_io.la  $(LDADD) libelan_interconnect.la
-#slurmd_elan_SOURCES = $(common_sources)
-
 
 libforked_la_SOURCES = forked_ctrl.c
 libthreaded_la_SOURCES = threaded_ctrl.c
-libforked_io_la_SOURCES = forked_io.c reconnect_utils.c io_threads.c 
+#libforked_io_la_SOURCES = forked_io.c reconnect_utils.c io_threads.c 
 libthreaded_io_la_SOURCES = threaded_io.c reconnect_utils.c io_threads.c 
 
 libnbio_la_SOURCES =  nbio.c reconnect_utils.c
