Make SLURM comm layer behave properly if no backup_controller is provided. It used to seg-fault. srun Makefile.am changed to re-link if comm library changes.

--- a/trunk/src/srun/Makefile.am
+++ b/trunk/src/srun/Makefile.am
@@ -9,4 +9,7 @@ srun_SOURCES = srun.c opt.c env.c opt.h env.h job.c job.h net.c net.h \
 srun_LDFLAGS = \
 	$(top_srcdir)/src/common/libcommon.la \
 	$(top_srcdir)/src/api/libslurm.la
-srun_LDADD = $(POPT_LIBS) 
+
+srun_LDADD = $(top_srcdir)/src/common/libcommon.la \
+		$(top_srcdir)/src/api/libslurm.la \
+		$(POPT_LIBS)
