--- a/trunk/etc/slurm.conf
+++ b/trunk/etc/slurm.conf
@@ -9,6 +9,7 @@ FastSchedule=1
 FirstJobId=65536
 HashBase=10
 HeartbeatInterval=60
+InactiveLimit=120
 KillWait=30
 Prioritize=/usr/local/maui/priority
 SlurmctldPort=7002 SlurmdPort=7003
