Removed redundant QA tests log-test.c and pack-test.c, both are in the DejaGnu test suite at testsuite

--- a/trunk/src/test/Makefile.am
+++ b/trunk/src/test/Makefile.am
@@ -6,8 +6,6 @@ else
 elan_testprogs =
 endif
 
-noinst_PROGRAMS = $(elan_testprogs) pack-test log-test slurm_protocol_stream_client slurm_protocol_stream_server 
-
-TESTS = pack-test log-test 
+noinst_PROGRAMS = $(elan_testprogs) slurm_protocol_stream_client slurm_protocol_stream_server 
 
 LDADD = $(top_srcdir)/src/common/libcommon.la
