Removed redundant QA tests slurm_protocol_stream_client.c and slurm_protocol_stream_server.c. see equivalents in testsuite/stream*

--- a/trunk/src/test/Makefile.am
+++ b/trunk/src/test/Makefile.am
@@ -6,6 +6,6 @@ else
 elan_testprogs =
 endif
 
-noinst_PROGRAMS = $(elan_testprogs) slurm_protocol_stream_client slurm_protocol_stream_server 
+noinst_PROGRAMS = $(elan_testprogs) 
 
 LDADD = $(top_srcdir)/src/common/libcommon.la
