Removed src/test, files moved to testsuite

--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -1,9 +1,8 @@
 # make sure popt gets distributed:
 EXTRA_DIST = popt
 
-# add subdir "squeue" as soon as something is there:
 if USE_INCLUDED_POPT
-SUBDIRS = popt common api slurmctld slurmd srun scontrol scancel squeue sinfo test
+SUBDIRS = popt common api slurmctld slurmd srun scontrol scancel squeue sinfo
 else
-SUBDIRS = common api slurmctld slurmd srun scontrol scancel squeue sinfo test
+SUBDIRS = common api slurmctld slurmd srun scontrol scancel squeue sinfo
 endif
