Removed src/test, files moved to testsuite #ifdef'ed out unused variable in controller if NOT --with-authd

--- a/trunk/testsuite/slurm_unit/common/Makefile.am
+++ b/trunk/testsuite/slurm_unit/common/Makefile.am
@@ -1,5 +1,11 @@
 AUTOMAKE_OPTIONS = foreign
 
-noinst_PROGRAMS = pack-test log-test stream_server stream_client bitstring-test
+if WITH_ELAN
+elan_testprogs = runqsw
+else
+elan_testprogs =
+endif
+
+noinst_PROGRAMS = $(elan_testprogs) pack-test log-test stream_server stream_client bitstring-test slurm_protocol_message_client slurm_protocol_message_server slurm_protocol_message_server_daemon
 
 LDADD   = $(top_srcdir)/src/common/libcommon.la
