--- a/trunk/testsuite/slurm_unit/common/Makefile.am
+++ b/trunk/testsuite/slurm_unit/common/Makefile.am
@@ -6,6 +6,6 @@ else
 elan_testprogs =
 endif
 
-noinst_PROGRAMS = $(elan_testprogs) pack-test log-test stream_server stream_client bitstring-test slurm_protocol_message_client slurm_protocol_message_server slurm_protocol_message_server_daemon
+noinst_PROGRAMS = $(elan_testprogs) pack-test log-test stream_server stream_client bitstring-test slurm_protocol_message_client slurm_protocol_message_server
 
 LDADD   = $(top_srcdir)/src/common/libcommon.la
