--- a/trunk/src/sinfo/Makefile.am
+++ b/trunk/src/sinfo/Makefile.am
@@ -2,13 +2,13 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-INCLUDES = -I$(top_srcdir)/src/common -I$(top_srcdir)/src/api
+INCLUDES = $(POPT_INCLUDES) -I$(top_srcdir)/src/common -I$(top_srcdir)/src/api
 
 bin_PROGRAMS = sinfo
 
 LDADD = $(top_srcdir)/src/common/libcommon.la \
-		$(top_srcdir)/src/api/libslurm.la \
-		$(POPT_LIBS)
+	$(top_srcdir)/src/api/libslurm.la \
+	$(POPT_LIBS)
 
 noinst_HEADERS = sinfo.h
 sinfo_SOURCES = sinfo.c opts.c 
