--- a/trunk/src/scancel/Makefile.am
+++ b/trunk/src/scancel/Makefile.am
@@ -2,11 +2,13 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-INCLUDES = -I$(top_srcdir)/src/common -I$(top_srcdir)/src/api
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/api
 
 bin_PROGRAMS = scancel
 
-LDADD = $(top_srcdir)/src/common/libcommon.la $(top_srcdir)/src/api/libslurm.la
+LDADD = 					\
+	$(top_builddir)/src/common/libcommon.la	\
+	$(top_builddir)/src/api/libslurm.la
 
 scancel_SOURCES = scancel.c
 
