--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -5,7 +5,7 @@ AUTOMAKE_OPTIONS = foreign
 
 sbin_PROGRAMS = slurmd 
 
-INCLUDES = $(SSL_CPPFLAGS)
+INCLUDES = -I$(top_srcdir) $(SSL_CPPFLAGS)
 
 if WITH_ELAN
 interconnect_lib = libelan_interconnect.la
@@ -17,9 +17,9 @@ noinst_LTLIBRARIES = 		\
 	libno_interconnect.la	
 endif
 
-LDADD = $(top_srcdir)/src/common/libcommon.la \
-	$(top_srcdir)/src/common/libdaemonize.la \
-	$(top_srcdir)/src/common/libcred.la \
+LDADD = $(top_builddir)/src/common/libcommon.la \
+	$(top_builddir)/src/common/libdaemonize.la \
+	$(top_builddir)/src/common/libcred.la \
 	$(SSL_LIBS)
 
 slurmd_LDADD = $(LDADD) $(interconnect_lib)
@@ -32,14 +32,15 @@ common_sources = 	        \
 	get_mach_stat.c         \
 	get_mach_stat.h		\
 	read_proc.c 	        \
-	read_proc.h 	        \
 	job.c job.h		\
 	io.c io.h		\
 	semaphore.c semaphore.h	\
 	shm.c shm.h		\
-	setenvpf.c setenvpf.h
+	setenvpf.c setenvpf.h   \
+	interconnect.h
 
 slurmd_SOURCES = $(common_sources)
+
 
 libelan_interconnect_la_SOURCES = elan_interconnect.c
 libno_interconnect_la_SOURCES   = no_interconnect.c
