--- a/trunk/testsuite/slurm_unit/slurmctld/Makefile.am
+++ b/trunk/testsuite/slurm_unit/slurmctld/Makefile.am
@@ -1,33 +1,34 @@
 AUTOMAKE_OPTIONS = foreign
 
 noinst_PROGRAMS = job_mgr-test job_step-test job_add job_cancel step_create
+noinst_HEADERS  = get_resp.h
 
-INCLUDES = -I$(top_srcdir)/src/common
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
 
-job_step_test_LDADD = $(top_srcdir)/src/common/libcommon.la \
-		$(top_srcdir)/src/api/libslurm.la
+job_step_test_LDADD = $(top_builddir)/src/common/libcommon.la \
+		$(top_builddir)/src/api/libslurm.la
 
-step_create_LDADD = $(top_srcdir)/src/common/libcommon.la \
-		$(top_srcdir)/src/api/libslurm.la
+step_create_LDADD = $(top_builddir)/src/common/libcommon.la \
+		$(top_builddir)/src/api/libslurm.la
 
-job_add_LDADD = $(top_srcdir)/src/common/libcommon.la \
-		$(top_srcdir)/src/api/libslurm.la
+job_add_LDADD = $(top_builddir)/src/common/libcommon.la \
+		$(top_builddir)/src/api/libslurm.la
 
-job_cancel_LDADD = $(top_srcdir)/src/common/libcommon.la \
-		$(top_srcdir)/src/api/libslurm.la
+job_cancel_LDADD = $(top_builddir)/src/common/libcommon.la \
+		$(top_builddir)/src/api/libslurm.la
 
-LDADD   = $(top_srcdir)/src/common/libcommon.la \
-		$(top_srcdir)/src/slurmctld/agent.o \
-		$(top_srcdir)/src/slurmctld/job_scheduler.o \
-		$(top_srcdir)/src/slurmctld/node_scheduler.o \
-		$(top_srcdir)/src/slurmctld/partition_mgr.o \
-		$(top_srcdir)/src/slurmctld/step_mgr.o \
-		$(top_srcdir)/src/slurmctld/job_mgr.o \
-		$(top_srcdir)/src/slurmctld/node_mgr.o \
-		$(top_srcdir)/src/slurmctld/locks.o \
-		$(top_srcdir)/src/common/parse_spec.o  \
-		$(top_srcdir)/src/slurmctld/read_config.o \
-		$(top_srcdir)/src/api/libslurm.la \
-		$(top_srcdir)/src/common/libcred.la \
+LDADD   = $(top_builddir)/src/common/libcommon.la \
+		$(top_builddir)/src/slurmctld/agent.o \
+		$(top_builddir)/src/slurmctld/job_scheduler.o \
+		$(top_builddir)/src/slurmctld/node_scheduler.o \
+		$(top_builddir)/src/slurmctld/partition_mgr.o \
+		$(top_builddir)/src/slurmctld/step_mgr.o \
+		$(top_builddir)/src/slurmctld/job_mgr.o \
+		$(top_builddir)/src/slurmctld/node_mgr.o \
+		$(top_builddir)/src/slurmctld/locks.o \
+		$(top_builddir)/src/common/parse_spec.o  \
+		$(top_builddir)/src/slurmctld/read_config.o \
+		$(top_builddir)/src/api/libslurm.la \
+		$(top_builddir)/src/common/libcred.la \
 		$(SSL_LIBS)
 
