--- a/trunk/testsuite/slurm_unit/slurmd/Makefile.am
+++ b/trunk/testsuite/slurm_unit/slurmd/Makefile.am
@@ -13,7 +13,7 @@ io_lib = $(top_srcdir)/src/slurmd/libthreaded_io.la
 endif
 	
 
-INCLUDES = -I$(top_srcdir)/src/common
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
 LDADD   = $(top_srcdir)/src/common/libcommon.la \
 	$(top_srcdir)/src/slurmd/task_mgr.o \
 	$(top_srcdir)/src/slurmd/shmem_struct.o \
