--- a/trunk/etc/slurm.conf
+++ b/trunk/etc/slurm.conf
@@ -1,17 +1,19 @@
 # 
-# Sample /etc/slurm.conf
+# Sample /etc/slurm.conf.localhost
 # Author: John Doe
 # Date: 11/06/2001
+# Note: "localhost" is translated by slurmctld to the actual hostname
 #
 ControlMachine=localhost BackupController=localhost
 Epilog="" Prolog=""
 FastSchedule=1
 FirstJobId=65536
 HashBase=10
-HeartbeatInterval=60
+HeartbeatInterval=10
 InactiveLimit=120
-KillWait=30
+KillWait=5
 Prioritize=/usr/local/maui/priority
+ReturnToService=1
 SlurmctldPort=7002 SlurmdPort=7003
 SlurmctldTimeout=300 SlurmdTimeout=300
 StateSaveLocation=/tmp/slurm.state
@@ -21,15 +23,10 @@ JobCredentialPublicCertificate=public.cert
 #
 # Node Configurations
 #
-NodeName=DEFAULT TmpDisk=16384 State=UNKNOWN
-NodeName=lx[0001-0002] State=DRAINED
-NodeName=lx[0003-8000] Procs=16 RealMemory=2048 Weight=16
-NodeName=lx[8001-9999] Procs=32 RealMemory=4096 Weight=40 Feature=1200MHz
+NodeName=DEFAULT TmpDisk=2 State=UNKNOWN
+NodeName=localhost Procs=16 RealMemory=1 Weight=16
 #
 # Partition Configurations
 #
-PartitionName=DEFAULT MaxTime=30 MaxNodes=2
-PartitionName=login Nodes=lx[0001-0002] State=DOWN
-PartitionName=debug Nodes=lx[0003-0030] State=UP    Default=YES
-PartitionName=class Nodes=lx[0031-0040] AllowGroups=students
-PartitionName=batch Nodes=lx[0041-9999] MaxTime=UNLIMITED MaxNodes=4096 RootOnly=YES
+PartitionName=DEFAULT MaxTime=30 MaxNodes=1
+PartitionName=debug Nodes=localhost State=UP    Default=YES
