--- a/trunk/src/squeue/Makefile.am
+++ b/trunk/src/squeue/Makefile.am
@@ -2,13 +2,13 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-INCLUDES = -I$(top_srcdir)/src/common -I$(top_srcdir)/src/api
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/api
 
 bin_PROGRAMS = squeue
 
-LDADD = $(top_srcdir)/src/common/libcommon.la \
-		$(top_srcdir)/src/api/libslurm.la \
-		$(POPT_LIBS)
+LDADD = $(top_builddir)/src/common/libcommon.la \
+	$(top_builddir)/src/api/libslurm.la     \
+	$(POPT_LIBS)
 
 noinst_HEADERS = squeue.h print.h
 squeue_SOURCES = squeue.c print.c opts.c 
