--- a/trunk/testsuite/slurm_unit/api/Makefile.am
+++ b/trunk/testsuite/slurm_unit/api/Makefile.am
@@ -3,6 +3,6 @@ AUTOMAKE_OPTIONS = foreign
 SUBDIRS = manual
 noinst_PROGRAMS = api-test 
 
-INCLUDES = -I$(top_srcdir)/src/common
-LDADD   = $(top_srcdir)/src/common/libcommon.la \
-		$(top_srcdir)/src/api/libslurm.la
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
+LDADD   = $(top_builddir)/src/common/libcommon.la \
+	  $(top_builddir)/src/api/libslurm.la
