Remove BackupController if same as ControlMachine (illegal).

--- a/trunk/etc/slurm.conf
+++ b/trunk/etc/slurm.conf
@@ -1,30 +1,30 @@
 # 
-# Sample /etc/slurm.conf.localhost
+# Sample /etc/slurm.conf
 # Author: John Doe
 # Date: 11/06/2001
 # Note: "localhost" is translated by slurmctld to the actual hostname
 #
-ControlMachine=localhost BackupController=localhost
+ControlMachine=localhost
 Epilog="" Prolog=""
 FastSchedule=1
 FirstJobId=65536
 HashBase=10
-HeartbeatInterval=10
+HeartbeatInterval=60
 InactiveLimit=120
-KillWait=5
+JobCredentialPrivateKey=private.key
+JobCredentialPublicCertificate=public.cert
+KillWait=30
 Prioritize=/usr/local/maui/priority
 ReturnToService=1
 SlurmctldPort=7002 SlurmdPort=7003
 SlurmctldTimeout=300 SlurmdTimeout=300
 StateSaveLocation=/tmp/slurm.state
 TmpFS=/tmp
-JobCredentialPrivateKey=private.key
-JobCredentialPublicCertificate=public.cert
 #
 # Node Configurations
 #
 NodeName=DEFAULT TmpDisk=2 State=UNKNOWN
-NodeName=localhost Procs=16 RealMemory=1 Weight=16
+NodeName=localhost Procs=1 RealMemory=128 Weight=16
 #
 # Partition Configurations
 #
