--- a/trunk/src/api/Makefile.am
+++ b/trunk/src/api/Makefile.am
@@ -15,6 +15,7 @@ libslurm_la_SOURCES =    \
 	cancel.c         \
 	complete.c       \
 	config_info.c    \
+	free_msg.c       \
 	job_info.c       \
 	job_step_info.c  \
 	node_info.c      \
