Move data structure initialization and default values to api/slurm.h.

--- a/trunk/src/api/Makefile.am
+++ b/trunk/src/api/Makefile.am
@@ -16,6 +16,7 @@ libslurm_la_SOURCES =    \
 	complete.c       \
 	config_info.c    \
 	free_msg.c       \
+	init_msg.c       \
 	job_info.c       \
 	job_step_info.c  \
 	node_info.c      \
