--- a/trunk/etc/slurm.conf
+++ b/trunk/etc/slurm.conf
@@ -4,8 +4,9 @@
 # Date: 11/06/2001
 # Note: "localhost" is translated by slurmctld to the actual hostname
 #
-ControlMachine=localhost
-Epilog="" Prolog=""
+ControlMachine=localhost 
+#
+Epilog=/admin/sbin/slurm.epilog
 FastSchedule=1
 FirstJobId=65536
 HashBase=10
@@ -15,9 +16,17 @@ JobCredentialPrivateKey=private.key
 JobCredentialPublicCertificate=public.cert
 KillWait=30
 Prioritize=/usr/local/maui/priority
-ReturnToService=1
-SlurmctldPort=7002 SlurmdPort=7003
-SlurmctldTimeout=300 SlurmdTimeout=300
+Prolog=/admin/sbin/slurm.prolog
+ReturnToService=0
+SlurmUser=jette
+#SlurmctldLogFile=/var/tmp/slurmctld.log
+SlurmctldPort=7002
+SlurmctldTimeout=300
+#SlurmdLogFile=/var/tmp/slurmd.log
+SlurmdPidFile=/var/run/slurmd.pid
+SlurmdPort=7003
+SlurmdSpoolDir=/var/tmp/slurmd.spool
+SlurmdTimeout=300
 StateSaveLocation=/tmp/slurm.state
 TmpFS=/tmp
 #
