o Major changes to support all methods of I/O handling. (i.e.    support documented uses of --input,output,error)  o Allow premature termination of srun (i.e. when IO is not yet    complete) by insistent user.  o added xstrfmtcat() and xmemcat() to xstring.c

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -36,6 +36,7 @@ common_sources = 	        \
 	io.c io.h		\
 	semaphore.c semaphore.h	\
 	shm.c shm.h		\
+	fname.c fname.h		\
 	setenvpf.c setenvpf.h   \
 	interconnect.h
 
