Major revisions all for support of TotalView (all within #ifdef HAVE_TOTALVIEW blocks). Basic functionality seems to be in place except for holding tasks at startup.

--- a/trunk/src/srun/Makefile.am
+++ b/trunk/src/srun/Makefile.am
@@ -12,7 +12,7 @@ bin_PROGRAMS = srun
 
 srun_SOURCES = srun.c opt.c env.c opt.h env.h job.c job.h net.c net.h \
 	       msg.c msg.h io.c io.h launch.h launch.c attach.h       \
-               reattach.c reattach.h fname.h fname.c
+               reattach.c reattach.h fname.h fname.c srun.wrapper.c
 srun_LDADD = $(top_builddir)/src/common/libcommon.la \
 	     $(top_builddir)/src/api/libslurm.la \
-	     $(POPT_LIBS) $(TOTALVIEW_LIBS)
+	     $(POPT_LIBS) 
