--- a/trunk/src/srun/Makefile.am
+++ b/trunk/src/srun/Makefile.am
@@ -12,7 +12,9 @@ bin_PROGRAMS = srun
 
 srun_SOURCES = srun.c opt.c env.c opt.h env.h job.c job.h net.c net.h \
 	       msg.c msg.h io.c io.h launch.h launch.c attach.h       \
-               reattach.c reattach.h fname.h fname.c srun.wrapper.c
+               reattach.c reattach.h fname.h fname.c srun.wrapper.c   \
+               signals.c
+
 srun_LDADD = $(top_builddir)/src/common/libcommon.la \
 	     $(top_builddir)/src/api/libslurm.la \
 	     $(POPT_LIBS) 
