o read_pidfile() added to daemonize.c  o slurmd tries to kill any old slurmd's on startup  o create_pidfile() locks pid file and keeps it open, so that    we can test pidfile for lock to definitively know whether old    slurmd is still running.

--- a/trunk/src/common/Makefile.am
+++ b/trunk/src/common/Makefile.am
@@ -79,7 +79,8 @@ noinst_HEADERS = 	\
 
 libdaemonize_la_SOURCES =  \
 	daemonize.c        \
-	daemonize.h
+	daemonize.h        \
+        fd.c fd.h
 
 libcred_la_SOURCES =       \
         credential_utils.c \
